# PersonalSite

./: .gitignore
.github/workflows/: testing.yml
web_server/: Cargo.toml  build.rs
web_server/src/: main.rs
zola/: config.toml
zola/content/benchmark_tooling_can_be_better/: index.md
zola/content/benchmarking_tooling_needs_to_be_better/: index.md
zola/content/building-a-dev-machine-2024-10/: index.md
zola/content/canoncollision/: index.md
zola/content/dpedal/: index.md
zola/content/framedata/: index.md
zola/content/reimagining-benchmark-tooling/: index.md
zola/content/rukaibox/: index.md
zola/content/rukaidata/: index.md
